--- a/src/main/resources/templates/thymeleaf/myPageLeft.html
+++ b/src/main/resources/templates/thymeleaf/myPageLeft.html
@@ -57,7 +57,7 @@
 					<ul class="mypage-ul">
 						<li class="myCollection" id="myCollection"><a href="#">소장품</a></li>
 						<li class="scrap" id="scrap"><a href="#">스크랩</a></li>
-						<!-- <li class="myWorkList" id="myWorkList"><a href="#">나의 작품(통합)</a></li> -->
+						<li class="myWorkList" id="myWorkList"><a href="#">나의 작품(통합)</a></li>
 					</ul>
 				</div>
 			</div>
