모바일 마이페이지 수정

--- a/src/main/resources/templates/thymeleaf/myPageLeft.html
+++ b/src/main/resources/templates/thymeleaf/myPageLeft.html
@@ -118,13 +118,7 @@ $(document).on("click", ".scrap", function(){
 });
 
 $(document).on("click", ".myWorkList", function(){
-	pageGoPost({
-		url:"/myWorkList",
-		target:"_self",
-		vals:[
-			["mbrSq", sMbrSqVal]
-		]
-	});
+	location.href="/myWorkList"
 });
 </script>
 </th:blcok>	
