이벤트 페이지 추가

--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -102,6 +102,10 @@
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
 							
+							<div class="swiper-slide" align="center" style="background-color:#6094CE;">
+								<!-- <img src="resources/img/banner-11_pc.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/> -->
+								<img src="resources/img/banner-16_pc.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
+							</div>
 							<!-- 이벤트 베너 2022-07-22 -->
 							<div class="swiper-slide" align="center" style="background-color:#f0eddc;">
 								<!-- <img src="resources/img/banner-11_pc.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/> -->
@@ -125,6 +129,9 @@
 				<div class="main-banner">						
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
+							<div class="swiper-slide">
+								<img src="resources/img/banner-16_pc.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
+							</div>
 							<!-- 이벤트 베너 2022-07-22 -->
 							<div class="swiper-slide">
 								<img src="resources/img/banner-15_pc.jpg" class="myCollection" style="cursor:pointer;"/>
