--- a/src/main/resources/templates/thymeleaf/index.html
+++ b/src/main/resources/templates/thymeleaf/index.html
@@ -162,6 +162,11 @@
 				<div class="main-banner">						
 					<div class="swiper mySwiper">
 						<div class="swiper-wrapper">
+						
+						<div class="swiper-slide">
+								<img src="resources/img/banner-16_mobile.jpg" onclick="javascript:location.href='/event';" style="cursor:pointer;"/>
+							</div>
+							
 							<!-- 이벤트 베너 2022-07-22 -->
 							<div class="swiper-slide">
 								<img src="resources/img/banner-15_mobile.jpg" class="myCollection" style="cursor:pointer;"/>
