인사이트 모달높이 수정

--- a/src/main/resources/static/css/ui_pc.css
+++ b/src/main/resources/static/css/ui_pc.css
@@ -5853,9 +5853,9 @@ position: relative;background-color: #fbfbfb;}
 /*0828*/
 .box_pt20 {
 	padding-top:20px; 
-	height:765px; 
+	height:90vh; 
 	overflow: auto; 
-	margin-top: 33px;
+	margin-top: 20px;
 }
 
 /*0830*/
