A/L 거래중 작가 생년월일 수정

--- a/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
+++ b/src/main/resources/templates/thymeleaf/fo/artistLibrary/artistDetail.html
@@ -526,7 +526,7 @@ function onload(sort, type){
 				html += '<div class="text-s" style="padding-left:5px;text-align:left">';
 				
 				//html += '<h3>'+ result[i].artstActvtyNm +' ('+ result[i].artstBirthYear +')</h3>';
-				html += '<h3>'+ result[i].artstActvtyNm +' ('+ artstBirthYear +')</h3>';
+				html += '<h3>'+ result[i].artstActvtyNm +' ('+ result[i].artstBirthYear +')</h3>';
 				html += '<p class="ts-1">'+ result[i].workNm +' ('+ result[i].workProdcYear +')</p>';
 				html += '<p>'+ result[i].workMatrl +'</p>';
 				html += '<p>'+ result[i].workSizeDepth +'x'+ result[i].workSizeWidth +'</p>';
