--- a/src/main/webapp/WEB-INF/views/boInclude/include_bottom.jspf
+++ b/src/main/webapp/WEB-INF/views/boInclude/include_bottom.jspf
@@ -17,6 +17,8 @@
 
 <!-- jQuery -->
 <script src="/resources/plugins/jquery/jquery.min.js"></script>
+<script src="/resources/plugins/jquery.table2excel.js"></script>
+
 <!-- Bootstrap 4 -->
 <script src="/resources/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="/resources/plugins/bootbox/bootbox.all.min.js"></script>
