Bidding Page 작가 이력 모달 팝업

--- a/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
+++ b/src/main/resources/templates/thymeleaf/fo/deal/bidding.html
@@ -1313,11 +1313,26 @@ function chart() {
 
 
 
+//URL 파라미터
+var param = location.search;
+var param = new URLSearchParams(param);
+var getParamMore= param.get('more');
+var getParamDealSq= param.get('dealSq');
+
+//2022-09-26 DealSq와 More 파라미터가 같다면 작가 이력 Modal POPUP Active
+if(getParamMore == getParamDealSq){
+	openArtstInfoModal();
+}
+
+
 //부모창 스크롤 방지
 function openArtstInfoModal(){ 
 	$('body').css("overflow", "hidden");
 	$('#artstInfoMore').modal({backdrop: 'static', keyboard: false})  
 	$("#artstInfoMore").modal("show");
+	
+	//URL 파라미터 생성
+	history.pushState(null, null, '?dealSq='+getParamDealSq+'&more='+getParamDealSq);
 }
 
 function closeArtstInfoModal(){ 
